added a couple constants for major test properties